--- a/aula_18_03/ensala_mais/pubspec.yaml
+++ b/aula_18_03/ensala_mais/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   supabase_flutter: ^2.8.4
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
